<resources>
    <string name="app_name">Weatherforecast</string>
    <string name="google_maps_key">AIzaSyAfYKUl0sC97Nlr6Hmr1CHPEIrgYmy7hQM</string>
    <string name="humidity">Humidity</string>
    <string name="min_temp">Min Temp</string>
    <string name="max_temp">Max Temp</string>
    <string name="today">Today</string>
    <string name="next_5_days">Next 5 Days</string>
    <string name="menu_weather_list">ForecastList</string>
    <string name="add_location">Add Location</string>
    <string name="view_location">View Location</string>
    <string name="weather">Weather</string>
</resources>