<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">


    <fragment
        android:id="@+id/autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        />




    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/autocomplete_fragment"
        android:background="@android:color/white">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/addLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_location"
                android:layout_marginLeft="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="20dp"/>


            <com.google.android.material.chip.Chip
                android:id="@+id/chipToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:checkable="false"
                android:checked="true"
                android:clickable="false"
                android:text="@string/today"
                android:textColor="@color/chipTextColor"
                app:chipBackgroundColor="@color/chipItemBackgroundColor" />


            <TextView
                android:id="@+id/viewLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_location"
                android:paddingRight="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"/>

            <include
                android:id="@+id/container_forecast"
                layout="@layout/layout_dashboard_forecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/chipToday"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp" />

            <TextView
                android:id="@+id/textViewForecastHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/container_forecast"
                android:layout_marginStart="16dp"
                android:text="@string/next_5_days"
                android:textColor="@color/mainTextColor"
                android:textSize="19sp"
                android:textStyle="bold" />


           <!-- <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerForecast"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/textViewForecastHeader"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_forecast" />-->

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/nav_host_fragment"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:defaultNavHost="true"
                android:layout_below="@id/textViewForecastHeader"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navGraph="@navigation/mobile_navigation" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>