<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_200"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="97dp">

        <TextView
            android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="23sp"
            tools:text="Pune" />

        <ImageView
            android:id="@+id/imageViewWeatherIcon"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="48dp"
            app:srcCompat="@drawable/a10d_svg" />

        <TextView
            android:id="@+id/textViewTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="36dp"
            android:text="15"
            android:textColor="@color/white"
            android:textSize="100sp"
            tools:text="25°" />

        <TextView
            android:id="@+id/textViewWeatherMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTemperature"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="23sp"
            tools:text="Clouds &amp; Sun" />

        <TextView
            android:id="@+id/textViewMinTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewWeatherMain"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:layout_toStartOf="@+id/textViewHumidityHeader"
            android:text="@string/min_temp"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewHumidityHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewWeatherMain"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/humidity"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewMaxTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewWeatherMain"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@+id/textViewHumidityHeader"
            android:text="@string/max_temp"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewHumidityHeader"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:textColor="@color/white"
            android:textSize="27sp"
            tools:text="35°" />

        <TextView
            android:id="@+id/tempMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewHumidityHeader"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="74dp"
            android:layout_marginBottom="24dp"
            android:layout_toStartOf="@+id/textViewHumidity"
            android:textColor="@color/white"
            android:textSize="27sp"
            tools:text="35°" />

        <TextView
            android:id="@+id/tempMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewMaxTemp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="74dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:layout_toEndOf="@+id/textViewHumidity"
            android:textColor="@color/white"
            android:textSize="27sp"
            tools:text="35°" />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tempMin"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="40dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="10.725" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tempMax"
            android:layout_alignBaseline="@+id/latitude"
            android:layout_marginTop="3dp"
            android:layout_marginStart="120dp"
            android:textColor="@color/white"
            android:layout_toRightOf="@+id/latitude"
            android:layout_marginBottom="10dp"
            android:textSize="14sp"
            tools:text="-68.896" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>